--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180772573-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-180772573-1');
+    </script>
+
     <title>er2es.github.io</title>
     <meta name="er2es.github.io">
     <meta description="webdeveloper2you">
