--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/noodel/dist/noodel-full.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/noodel-search/dist/noodel-search.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/disableautofill/src/jquery.disableAutoFill.min.js"></script>
     <script src="index.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/noodel/dist/noodel.css">
     <link rel="stylesheet" href="index.css">
@@ -275,6 +276,8 @@
 
 $(document).ready(function() {
 
+    $('#fcf-form-id').disableAutoFill();
+    $('#searchBar').disableAutoFill();
    
 	
 	// Add class to mailto link
@@ -337,4 +340,46 @@ function copyToClipboard(text) {
     document.body.removeChild(dummy);
 }
 
+
+
+
+    /* apply only to forms with the action pointing to Basin */
+    $(document).on('click', '#fcf-button', function() {
+       
+        form = $("#fcf-form-id");
+        form.submit(function (e) {
+            /* stop the form from submitting */
+            e.preventDefault();
+            form = $(e.target);
+            /* get the form's action parameter and add ".json" to the end */
+            action = form.attr('action') + '.json';
+            /* submit the form via ajax */
+            $.ajax({
+                url: action,
+                method: "POST",
+                data: form.serialize(),
+                dataType: "json",
+                success: function (data) {
+                    if (data.success) {
+                        /* successful submission - hide the form and show the success message */
+                        window.location.href = "thankyou.html";
+                        console.log(data);
+                    } else {
+                        /* failed submission - log the output to the console and show the failure message */
+                        //console.log(data);
+                        alert("Sorry, the form not working...plz. send me an email!");
+                        
+                    }
+                },
+                error: function () {
+                    /* failed submission - show the failure message */
+                    //console.log("error");
+                    alert("Sorry, the form not working...plz. send me an email!");
+                }
+            });
+        });
+    });
+
+
 </script>
+
