--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <p><center><img src="img/szj.jpg" class='szj'> </center> <p>
             <p class="center">webdeveloper & QA agent</p>
             <div class="link-container">
-                <span class="link" id="jumpContact1" title='back'  target="_blank"><img src="img/back-arrow-1767523-1502427.png" class="link-icon max-w-50"></span>
+                <span class="link" id="jumpContact1" title='back'  target="_blank"><img src="img/email-mail-sent.png" class="link-icon max-w-50"></span>
             </div>
 
         </div>
