--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </script>
 
     <title>er2es.github.io</title>
-    <meta name="er2es.github.io">
-    <meta description="webdeveloper2you">
+    <meta name="Szabó József - webdeveloper & QA agent">
+    <meta description="webdeveloper & QA agent">
     <meta property="og:title" content="er2es.github.io" />
     <meta property="og:description" content="budapest based webdeveloper & QA agent" />
     <meta property="og:type" content="website" />
