--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180772573-1"></script>
     <script>
@@ -31,7 +32,23 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/noodel/dist/noodel.css">
     <link rel="stylesheet" href="index.css">
 
-    <title>er2es.github.io</title>
+    <title>Szabó József - webdeveloper & QA agent</title>
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org/",
+          "@type": "Person",
+          "name": "Szabó József",
+          "url": "https://er2es.github.io",
+          "image": "https://er2es.github.io/img/szj.jpg",
+          "jobTitle": "webdevelepor & QA agent",
+          "worksFor": {
+            "@type": "Organization",
+            "name": "Wordpress developers"
+          }  
+        }
+    </script>
+
 </head>
 
 <body>
