--- a/thankyou.html
+++ b/thankyou.html
@@ -45,8 +45,10 @@
     <div id="root" style="display: none;">
         
         <div class="noode">
-            <h1 class="center">Thank you!</h1>
+            <h1 class="center">Thank you! / Köszönöm!</h1>
             <p class="center">Your message has been sent!</p>
+            <hr>
+            <p class="center">Üzenet küldése sikeres!</p>
             <div class="link-container">
                 <a class="link" id="jumpHome" title='back to homepage' href='/'  target="_self"><img src="img/back-arrow-1767523-1502427.png" class="link-icon max-w-50"></a>
             </div>
