--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           "jobTitle": "webdevelepor & QA agent",
           "worksFor": {
             "@type": "Organization",
-            "name": "PHP & Wordpress developer @ Budapest"
+            "name": "PHP (Laravel, Codeigniter) & Wordpress developer @ Budapest"
           }  
         }
     </script>
@@ -145,8 +145,8 @@
                 <h3>in wordpress</h3>
                 <p>almost everything</p>
                 <div class="noode">
-                    <h4>+ make a new website / webshop</h4>
-                    <h4>+ security & perfomance (ssl, cache)</h4>
+                    <h4>+ make a new website / woocommerce shop</h4>
+                    <h4>+ security & perfomance (ssl, cache, google PSI/GTmetrix optimization)</h4>
                     <h4>+ plugin / theme template fixes </h4>
                     <h4>+ migrate / move to new server </h4>
                     <h4>+ small fixes </h4>
@@ -157,12 +157,18 @@
 
             </div>
             <div class="noode">
-                <h3>custom web applications</h3>
-                <p>which can handle your online operational needs</p>
+                <h3>custom PHP web applications</h3>
+                <p>in Laravel or Codeigniter</p>
+                <img src="img/w/ci.png" style="float: left;" class="max-w-50"/>
+                <img src="img/w/laravel.png" style="float: right;" class="max-w-50"/>
             </div>
             <div class="noode">
-                <h3>Limesurvey / custom php survey</h3>
-                <p>(hosted@me or hosted@you)</p>
+                <h3>limesurvey or custom php survey</h3>
+                <p>(hosted @ me or hosted @ you)</p>
+            </div>
+            <div class="noode">
+                <h3>VBA programming</h3>
+                <p>in MS Excel / MS Access</p>
             </div>
         </div>
         <div class="noode">
