--- a/index_hu.html
+++ b/index_hu.html
@@ -124,7 +124,7 @@
             </div>
             <div class="noode">
                 <h3>függőségek</h3>
-                <p>ahogy sok másnak is</p>
+                <p>ahogy sokunknak :)</p>
                 <div class="noode">
                    
                     <img src="img/dep/cafe.png" class="max-w-50"/>
