--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <title>Szabó József - webdeveloper & QA agent</title>
     <meta title="Szabó József - webdeveloper & QA agent">
+    <meta http-equiv="Cache-control" content="public">
+    <meta http-equiv="cache-control" content="max-age=172800" />
     <meta description="webdeveloper & QA agent">
     <meta property="og:title" content="er2es.github.io" />
     <meta property="og:description" content="budapest based webdeveloper & QA agent" />
