--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 <h3>work</h3>
                 <p> my short cv </p>
                 <div class="noode">
-                    <h3>summary</h3>
-                    <p>budapest based webdeveloper & QA agent</p>
+                    <h3>webdeveloper @now</h3>
+                    <p><a href="https://mbvk.hu/" target="_blank">Hungarian Chamber of Judicial Officers</a></p>
                 </div>
                 <div class="noode">
                     <h3>webdeveloper - 1 year</h3>
