--- a/index_hu.html
+++ b/index_hu.html
@@ -95,11 +95,11 @@
                 <h3>tapasztalat</h3>
                 <p> rövid önéletrajz </p>
                 <div class="noode">
-                    <h3>összefoglaló</h3>
-                    <p>webfejlesztő és tesztelő</p>
+                    <h3>php webfejlesztő - jelenleg is</h3>
+                    <p><a href="https://mbvk.hu/" target="_blank">Magyar Bírósági Végrehajtói Kar</a></p>
                 </div>
                 <div class="noode">
-                    <h3>webdeveloper - 1 év</h3>
+                    <h3>php webfejlesztő - 1 év</h3>
                     <p><a href="https://semmelweis.hu/" target="_blank">Semmelweis Egyetem</a></p>
                 </div>
                 <div class="noode">
